Loaded data from https://www.worldometers.info/coronavirus

--- a/COVID19_DataApp/MainPage.xaml
+++ b/COVID19_DataApp/MainPage.xaml
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="COVID19_DataApp.MainPage">
     <StackLayout>
-        <!-- Place new controls here -->
-        <Button Text="Load COVID 19 cases"
-                HorizontalOptions="Center"
-                VerticalOptions="CenterAndExpand"
-                Clicked="LoadCOVIDCases_Clicked"/>
+       <ActivityIndicator
+           x:Name="activityIndicator"
+           HorizontalOptions="Center"
+           VerticalOptions="CenterAndExpand"
+           IsRunning="True"
+           Color="Black">
+       </ActivityIndicator>
+        <Label x:Name="errMsg"
+               HorizontalOptions="Center"
+               VerticalOptions="CenterAndExpand"
+               Padding="10"
+               IsVisible="false">
+        </Label>
     </StackLayout>
 </ContentPage>
