--- a/COVID19_DataApp/CountryDetailsPage.xaml
+++ b/COVID19_DataApp/CountryDetailsPage.xaml
@@ -9,18 +9,18 @@
     BackgroundColor="BlueViolet">
         <Grid BackgroundColor="White" Padding="5">
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Label Text="{Binding CountryName}" FontSize="Header" Grid.ColumnSpan="2" HorizontalOptions="Center" VerticalOptions="Center"></Label>
+            <Label Text="{Binding CountryName}" FontSize="Body" Grid.ColumnSpan="2" HorizontalOptions="Center" VerticalOptions="Center"></Label>
             <Label Grid.Row="1" Text="Total Cases: " HorizontalOptions="End" VerticalOptions="Center"></Label>
             <Label Grid.Row="1" Grid.Column="1" Text="{Binding TotalCases, StringFormat='{}{0:0,0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
 
@@ -28,10 +28,10 @@
             <Label Grid.Row="2" Grid.Column="1" Text="{Binding TotalDeaths, StringFormat='{}{0:0,0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
 
             <Label Grid.Row="3" Text="New Cases: " HorizontalOptions="End" VerticalOptions="Center"></Label>
-            <Label Grid.Row="3" Grid.Column="1" Text="{Binding NewCases, StringFormat='{}{0:+#}', FallbackValue='0'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
+            <Label Grid.Row="3" Grid.Column="1" Text="{Binding NewCases, StringFormat='{}{0:+0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
 
             <Label Grid.Row="4" Text="New Deaths: " HorizontalOptions="End" VerticalOptions="Center"></Label>
-            <Label Grid.Row="4" Grid.Column="1" Text="{Binding NewDeaths, StringFormat='{}{0:+#}', FallbackValue='0'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
+            <Label Grid.Row="4" Grid.Column="1" Text="{Binding NewDeaths, StringFormat='{}{0:+0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
 
             <Button Grid.Row="5" Text="OKAY" Grid.ColumnSpan="2" HorizontalOptions="Center" VerticalOptions="Center" Clicked="ButtonClose_Clicked"></Button>
         </Grid>
