--- a/COVID19_DataApp/MainPage.xaml
+++ b/COVID19_DataApp/MainPage.xaml
@@ -3,11 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:COVID19_DataApp"
              x:Class="COVID19_DataApp.MainPage">
     <AbsoluteLayout x:Name="MainLayout"
                     VerticalOptions="FillAndExpand"
-                    HorizontalOptions="FillAndExpand"
-                    Margin="10,40,10,10">
+                    HorizontalOptions="FillAndExpand">
+        <AbsoluteLayout.Margin>
+            <OnPlatform macOS="10,40,10,10"></OnPlatform>
+        </AbsoluteLayout.Margin>
        <ActivityIndicator
            x:Name="activityIndicator"
            IsRunning="True"
@@ -24,24 +27,50 @@
         <CollectionView x:Name="CountryList"                 
                         Margin="10"  
                         AbsoluteLayout.LayoutFlags="PositionProportional" 
-                        AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
+                        AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
+                        SelectionChanged="Country_Tapped"
+                        SelectionMode="Single">
             <CollectionView.ItemsLayout>
                 <GridItemsLayout Orientation="Vertical" Span="2"/>
             </CollectionView.ItemsLayout>
             <CollectionView.Header>
-                <Entry x:Name="SearchEntry" Margin="10" Placeholder="Search Country">
-                </Entry>    
+                <Grid Padding="5" x:Name="WorldLayout">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Label Text="COVID WORLD DATA" FontSize="Body" Grid.ColumnSpan="2" HorizontalOptions="Center" VerticalOptions="Center"></Label>
+                    <Label Grid.Row="1" Text="Total Cases: " HorizontalOptions="End" VerticalOptions="Center"></Label>
+                    <Label Grid.Row="1" Grid.Column="1" Text="{Binding TotalCases, StringFormat='{}{0:0,0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
+
+                    <Label Grid.Row="2" Text="Total Deaths: " HorizontalOptions="End" VerticalOptions="Center"></Label>
+                    <Label Grid.Row="2" Grid.Column="1" Text="{Binding TotalDeaths, StringFormat='{}{0:0,0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
+
+                    <Label Grid.Row="3" Text="New Cases: " HorizontalOptions="End" VerticalOptions="Center"></Label>
+                    <Label Grid.Row="3" Grid.Column="1" Text="{Binding NewCases, StringFormat='{}{0:+0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
+
+                    <Label Grid.Row="4" Text="New Deaths: " HorizontalOptions="End" VerticalOptions="Center"></Label>
+                    <Label Grid.Row="4" Grid.Column="1" Text="{Binding NewDeaths, StringFormat='{}{0:+0}'}" HorizontalOptions="Start" VerticalOptions="Center"></Label>
+
+                    <Entry Grid.Row="5" Grid.ColumnSpan="2" x:Name="SearchEntry" Placeholder="Search Country">
+                    </Entry>
+                </Grid>
             </CollectionView.Header>
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                       <StackLayout>
                           <Frame CornerRadius="5" Padding="10,5,10,5" Margin="5" BackgroundColor="LightYellow">
-                              <Label Text="{Binding CountryName}" BackgroundColor="Transparent">
-                              </Label>
-                              <Frame.GestureRecognizers>
-                                  <TapGestureRecognizer Tapped="Country_Tapped"></TapGestureRecognizer>
-                              </Frame.GestureRecognizers>
-                          </Frame>
+                            <Label Text="{Binding CountryName}" BackgroundColor="Transparent">
+                            </Label>
+                        </Frame>
                       </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
