--- a/COVID19_DataApp/MainPage.xaml
+++ b/COVID19_DataApp/MainPage.xaml
@@ -3,13 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:local="clr-namespace:COVID19_DataApp"
+             xmlns:local="clr-namespace:COVID19_DataApp" 
+             xmlns:converters="clr-namespace:COVID19_DataApp.Converters"
              x:Class="COVID19_DataApp.MainPage">
     <ContentPage.Resources>
         <ResourceDictionary>
-            <Color x:Key="colorNewCasesLessThanThousand">LightGreen</Color>
+            <Color x:Key="colorNewCasesLessThanThousand">#baf235</Color>
             <Color x:Key="colorNewCasesMoreThanThousand">Red</Color>
             <Color x:Key="colorNewCasesAndDeathsMoreThanThousand">DarkRed</Color>
+            <converters:UpperTextConverter x:Key="toUpperCaseConverter"/>
         </ResourceDictionary>
     </ContentPage.Resources>
     <AbsoluteLayout x:Name="MainLayout"
@@ -34,11 +36,12 @@
                AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
         </Label>
                 <CollectionView x:Name="CountryList"
-                            SelectionChanged="Country_Tapped"
-                            SelectionMode="Single"
-                            AbsoluteLayout.LayoutFlags="All" 
-                            AbsoluteLayout.LayoutBounds="0,0,1,1"
-                            Margin="10" IsVisible="false">
+                                IsGrouped="True"
+                                SelectionChanged="Country_Tapped"
+                                SelectionMode="Single"
+                                AbsoluteLayout.LayoutFlags="All" 
+                                AbsoluteLayout.LayoutBounds="0,0,1,1"
+                                Margin="10" IsVisible="false">
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout Orientation="Vertical" Span="2"/>
                     </CollectionView.ItemsLayout>
@@ -126,6 +129,15 @@
                             </Entry>
                         </Grid>                          
                     </CollectionView.Header>
+                    <CollectionView.GroupHeaderTemplate>
+                        <DataTemplate>
+                              <StackLayout Padding="10" Margin="5" BackgroundColor="#ffff9e">
+                                    <Label Text="{Binding Key, Converter={StaticResource toUpperCaseConverter}}" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"
+                                           HorizontalTextAlignment="Center" BackgroundColor="Transparent">                                          
+                                    </Label>
+                               </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.GroupHeaderTemplate>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                               <StackLayout>
